--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.1",
+    "@angular/cdk": "^9.1.3",
     "@angular/common": "~9.0.1",
     "@angular/compiler": "~9.0.1",
     "@angular/core": "~9.0.1",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.0.1",
+    "@angular/material": "^9.1.3",
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
-    "rxjs": "~6.5.4",
+    "@types/googlemaps": "^3.39.3",
+    "apollo-angular": "^1.8.0",
+    "apollo-cache-inmemory": "^1.6.5",
+    "rxjs": "^6.5.4",
+    "rxjs-compat": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
